--- a/index.html
+++ b/index.html
@@ -57,26 +57,8 @@
    <h1>
     My Automated Blog!
    </h1>
-   <a href="index.html">
-    home
-   </a>
-   <a href="content\Steve_Jobs_on_failure.html">
-    Steve_Jobs_on_failure
-   </a>
-   <a href="content\key_points_of_Subtle_art_of_not_giving_a_F.html">
-    key_points_of_Subtle_art_of_not_giving_a_F
-   </a>
-   <a href="content\Learnings_from_Shawshank_Redemption.html">
-    Learnings_from_Shawshank_Redemption
-   </a>
-   <a href="content\Power_of_Coding.html">
-    Power_of_Coding
-   </a>
-   <a href="content\Movie_Social_Dillema_summary.html">
-    Movie_Social_Dillema_summary
-   </a>
-   <a href="content\Less_is_More.html">
-    Less_is_More
+   <a href="content\age_of_ai.html">
+    age_of_ai
    </a>
    <a href="content\story_of_Nike.html">
     story_of_Nike
@@ -84,9 +66,26 @@
    <a href="content\What_is_Quantum_Computing.html">
     What_is_Quantum_Computing
    </a>
-   <a href="content\age_of_ai.html">
-    age_of_ai
+   <a href="content\Steve_Jobs_on_failure.html">
+    Steve_Jobs_on_failure
    </a>
+   <!-- <a href="content\key_points_of_Subtle_art_of_not_giving_a_F.html">
+    key_points_of_Subtle_art_of_not_giving_a_F
+   </a> -->
+   <a href="content\Learnings_from_Shawshank_Redemption.html">
+    Learnings_from_Shawshank_Redemption
+   </a>
+   <!-- <a href="content\Power_of_Coding.html">
+    Power_of_Coding
+   </a> -->
+   <a href="content\Movie_Social_Dillema_summary.html">
+    Movie_Social_Dillema_summary
+   </a>
+   <a href="content\Less_is_More.html">
+    Less_is_More
+   </a>
+   
+   
   </div>
  </body>
 </html>
